<resources>
    <string name="app_name">Dibujos del Ayer</string>
    <string name="hint_name">nombre</string>
    <string name="formulario_button_add">Publicar</string>
    <string name="hint_content">contenido</string>
    <string name="button_mainPage">Regresar</string>
    <string name="descripcionImagen">uso de un documento para adornar el cuestionario</string>
    <string name="tvLogin">Volver a la pantalla principal</string>
    <string name="DescriptionImageArrow">Flecha para volver a la pantalla principal</string>
    <string name="hint_serie">serie</string>
    <string name="hint_url">Url(solo de la imagen)</string>
    <string name="addDibujo">Dibujo insertado!</string>
    <string name="addDibujoBadRequest">Debes rellenar todos los campos</string>
    <string name="mainMenuAddCharacter">Añadir personaje</string>
    <string name="mainMenuListCharacters">Lista de personajes</string>
    <string name="mainMenuImage">Imagen</string>
    <string name="iconDescription">Icon image</string>
    <string name="formulario">Formulario</string>
    <string name="textImageActivity">Aquí se mostrara la última imagen añadida</string>
    <string name="descriptionImagenImageLayout">ultima imagen que sube un usuario</string>
</resources>