<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintmain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Cuestionario">

    <ImageView
        android:id="@+id/logoLogin"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:contentDescription="@string/descripcionImagen"
        app:srcCompat="@drawable/hoja"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="75dp"
        />

    <LinearLayout
        android:id="@+id/linealInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/logoLogin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"

            android:hint="@string/hint_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eName"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:background="@color/lightGreen"
                android:inputType="textPersonName">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilContenido"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="100dp"

            android:layout_marginBottom="40dp"
            android:hint="@string/hint_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/eContenido"
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_marginBottom="20dp"
                android:background="@color/lightblue"
                android:inputType="text">

            </com.google.android.material.textfield.TextInputEditText>

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linealButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@+id/linealInfo">

        <Button
            android:id="@+id/buttonComentar"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/formulario_button_add" />

        <TextView
            android:id="@+id/tvPrincipal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvLogin"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>